--- a/music.html
+++ b/music.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Player</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <button id="playRandomButton">Reproduzir Aleatoriamente</button>
     <button id="pauseButton" disabled>Pausar</button>
+    <button id="nextButton">Próxima</button>
     
     <!-- Espaço para exibir o nome da música -->
     <h2 id="nextTrack">Próxima música: Nenhuma</h2>
