--- a/music.html
+++ b/music.html
@@ -19,7 +19,7 @@
             <img src="imagens/Shuffle.png" alt="Play Random">
         </button>
         <button id="pauseButton" disabled>
-            <img src="imagens/Play-Pause.png" alt="Pause">
+            <img src="imagens/Play.png" alt="Pause">
         </button>
         <button id="nextButton">
             <img src="imagens/Next.png" alt="Next">
